# K-ICT_DataCreatorCamp_2025

./: .gitignore  README.md  main.py  pyproject.toml
res/docs/mission_1/: README.md  pyproject.toml  requirements.txt
res/docs/mission_2/: README.md  pyproject.toml  requirements.txt
res/docs/mission_3/: README.md  pyproject.toml  requirements.txt
src/: chimney.yaml  chimney_fc_best.pth  gen_test_list.py  json2txt.py  mission_1.ipynb  mission_2.dino.cross.ipynb  mission_2.ipynb  mission_2.resnet.cross.ipynb  mission_2.swin.cross.ipynb  mission_2.swin.pool.ipynb  mission_2_dev.ipynb  mission_2_ori.ipynb  mission_3.ipynb  mission_4-2.ipynb  mission_4-2.smp.ipynb  mission_4-2.smp18p.ipynb  mission_4-2.smp50p.ipynb  mission_4.ipynb  test_chimney_with_fc.py  train.py  yolov8-pose-p6-chimney.yaml
src/creator_camp/datasets/: __init__.py  index.py  kompsat.py  landsat.py  sentinel.py
src/creator_camp/models/components/: dino.py
src/creator_camp/models/rt_detr/: __init__.py  custom_rt_detr.py  loss_rt_detr.py
