[project]
name = "mission3"
version = "0.1.0"
description = "Mission 3"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "albumentations==1.3.1",
    "matplotlib==3.7.5",
    "numpy==1.23.2",
    "opencv-python==4.6.0.66",
    "rasterio==1.3.11",
    "scikit-learn==1.1.2",
    "tensorflow==2.10.0",
    "tensorflow-datasets",
    "wandb==0.16.1",
]
